# ros2_socketcan

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  package.xml
.github/workflows/: build_test.yml
include/ros2_socketcan/: socket_can_common.hpp  socket_can_id.hpp  socket_can_receiver.hpp  socket_can_receiver_node.hpp  socket_can_sender.hpp  socket_can_sender_node.hpp  visibility_control.hpp
launch/: socket_can_bridge.launch.xml  socket_can_receiver.launch.py  socket_can_sender.launch.py
ros2_socketcan/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros2_socketcan/design/: README.md
ros2_socketcan/include/ros2_socketcan/: socket_can_common.hpp  socket_can_id.hpp  socket_can_receiver.hpp  socket_can_receiver_node.hpp  socket_can_sender.hpp  socket_can_sender_node.hpp
ros2_socketcan/launch/: socket_can_bridge.launch.xml  socket_can_receiver.launch.py  socket_can_sender.launch.py
ros2_socketcan/src/: socket_can_common.cpp  socket_can_id.cpp  socket_can_receiver.cpp  socket_can_receiver_node.cpp  socket_can_sender.cpp  socket_can_sender_node.cpp
ros2_socketcan/test/: gtest_main.cpp  receiver.cpp  sanity_checks.cpp  vcan0_setup.sh  vcan0_teardown.sh
ros2_socketcan_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros2_socketcan_msgs/msg/: FdFrame.msg  Frame.msg
src/: socket_can_common.cpp  socket_can_id.cpp  socket_can_receiver.cpp  socket_can_receiver_node.cpp  socket_can_sender_node.cpp
test/: receiver.cpp  sanity_checks.cpp
